--- a/game2/index.html
+++ b/game2/index.html
@@ -19,75 +19,75 @@
   <section class="memory-game">
     <div class="memory-card" data-framework="aurelia">
       <img class="front-face" src="../img/lovelace.jpg" alt="Aurelia" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="aurelia">
       <img class="front-face" src="../img/lovelace.jpg" alt="Aurelia" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="vue">
       <img class="front-face" src="../img/malala.jpg" alt="Vue" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="vue">
       <img class="front-face" src="../img/malala.jpg" alt="Vue" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="angular">
       <img class="front-face" src="../img/marrie.jpeg" alt="Angular" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="angular">
       <img class="front-face" src="../img/marrie.jpeg" alt="Angular" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="ember">
       <img class="front-face" src="../img/marx.jpg" alt="Ember" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="ember">
       <img class="front-face" src="../img/marx.jpg" alt="Ember" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="backbone">
       <img class="front-face" src="../img/newton.jpg" alt="Backbone" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="backbone">
       <img class="front-face" src="../img/newton.jpg" alt="Backbone" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="react">
       <img class="front-face" src="../img/nicolas.jpg" alt="React" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="react">
       <img class="front-face" src="../img/nicolas.jpg" alt="React" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
 
 
     <div class="memory-card" data-framework="galileu">
       <img class="front-face" src="../img/platao.jpg" alt="1" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="galileu">
       <img class="front-face" src="../img/platao.jpg" alt="1" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
 
     <div class="memory-card" data-framework="gusmao">
       <img class="front-face" src="../img/saude.jpg" alt="2" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
     <div class="memory-card" data-framework="gusmao">
       <img class="front-face" src="../img/saude.jpg" alt="2" />
-      <img class="back-face" src="../img/sil.jpg" alt="JS Badge" />
+      <img class="back-face" src="../img/sil.png" alt="JS Badge" />
     </div>
 
   </section>
